# boudica_epos

./: CMakeLists.txt  README.md  call.txt
sql/: DATABASE_IMPROVEMENTS.md  add_admin.sql  search_functions.sql  setup.sql
src/: authentication.cpp  base64pp.cpp  cryptography.cpp  http.cpp  logging.cpp  main.cpp  postgresbc.cpp  stripe.cpp  utils.cpp
src/includes/: authentication.h  base64pp.h  cryptography.h  environment.h  http.h  jsonobject.h  logging.h  postgresbc.h  querydata.h  string.hpp  stripe.h  utils.h
web/: README.md  index.html
web/scripts/: add_stock_item.js  application.js  dashboard.js  eod.js  forecasting.js  invoice_in.js  keypad.js  login.js  order-history.js  printer.js  product_lookup.js  reports.js  show_products.js  special_orders.js  stock_in.js  stock_take.js  tabs.js  till-card-payment.js  till.js  toast.js
web/styles/: modern.css  page.css  reports.css  till.css
web/styles_sib/: login.css  pages.css  toast.css
web_store/: README.md  cart-management.html  cart.html  index.html  order-confirmation.html  order-history.html  receipt.html  reports.html  sitemap.xml
web_store/js/: app.js  cart.js  data.js  epos.js  storage.js  stripe-checkout.js  toast.js  users.js
web_store/js/driver/: api.js  boudica.js  credentials.js  pgbc.js  results.js  storage.js
web_store/styles/: cart.css  loader.css  styles.css  toast.css
